--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:dev": "vite build --mode development",
+    "build:skip-ts": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
